created project pages, updated solutions page

--- a/html-main/index-civil.html
+++ b/html-main/index-civil.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="image/favicon.png" type="image/png" sizes="16x16">
 	<link rel="stylesheet" type="text/css" href="css/vendor.bundle.css">
-	<link id="style-css" rel="stylesheet" type="text/css" href="css/style.css">
+	<link id="style-css" rel="stylesheet" type="text/css" href="css/style-bluelight.css">
 </head>
 <body class="site-body style-v1">
 	<!-- Header --> 
@@ -68,13 +68,13 @@
 						<li class="dropdown">
 							<a href="solutions.html" class="dropdown-toggle">Services <b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="solution-single.html">Civil &amp; Transportation Engineering</a></li>
-								<li><a href="solution-single.html">Route &amp; Topographic Surveying</a></li>
-								<li><a href="solution-single.html">Drainage Studies</a></li>
-								<li><a href="solution-single.html">Environmental Services</a></li>
-								<li><a href="solution-single.html">Watershed Planning</a></li>
-								<li><a href="solution-single.html">Permitting</a></li>
-								<li><a href="solution-single.html">Floodplain Studies</a></li>
+								<li><a href="projects-alter-civil.html">Civil &amp; Transportation Engineering</a></li>
+								<li><a href="projects-alter-route-topo.html">Route &amp; Topographic Surveying</a></li>
+								<li><a href="projects-alter-drainage.html">Drainage Studies</a></li>
+								<li><a href="projects-alter-enviro.html">Environmental Services</a></li>
+								<li><a href="projects-alter-watershed.html">Watershed Planning</a></li>
+								<li><a href="projects-alter-permitting.html">Permitting</a></li>
+								<li><a href="projects-alter-floodplain.html">Floodplain Studies</a></li>
 								
 							</ul>
 						</li>
@@ -165,7 +165,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-a.jpg" alt="">
 								</div>
@@ -182,7 +182,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-b.jpg" alt="">
 								</div>
@@ -199,7 +199,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-c.jpg" alt="">
 								</div>
@@ -216,7 +216,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-d.jpg" alt="">
 								</div>
@@ -233,7 +233,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-e.jpg" alt="">
 								</div>
@@ -250,7 +250,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-f.jpg" alt="">
 								</div>
@@ -267,7 +267,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even justify-content-center">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="solution-single.html">
+							<a href="projects-alter-.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-f.jpg" alt="">
 								</div>
@@ -331,7 +331,7 @@
 
 				<div class="row row-vm">
 					<div class="col-sm-6 res-m-bttm">
-						<h2>We are leader in Watershed Planning</h2>
+						<h2>We are leaders in Watershed Planning</h2>
 						<p>Our capabilities include new elefeind norma arcu. Pellentesque accumsan est in tempus etos ullamcorper sem quam suscipit lacus maecenas tortor. Suspendisse gravida ornare non mattis velit rutrum modest sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo in their respective.</p>
 					</div>
@@ -388,6 +388,7 @@
 		</div>
 	</div>
 	<!-- End Section -->
+
 	<!-- Project Section -->
 	<div class="section section-projects recent-project section-pad">
 	    <div class="container">
@@ -475,6 +476,7 @@
 	    </div>
 	</div>
 	<!-- End Section -->
+
 	<!-- Client logo -->
 	<div class="section section-logos section-pad-md bg-light">
 		<div class="container">
@@ -493,7 +495,9 @@
 		</div>	
 	</div>
 	<!-- End Section -->
+	
 	<!-- Call Action -->
+	<!--
 	<div class="call-action has-bg" style="background-image: url('image/plx-cta.jpg');">
 		<div class="cta-block">
 			<div class="container">
@@ -508,6 +512,8 @@
 				</div>
 			</div>
 		</div>
+	-->
+
 	</div>
 	<!-- End Section -->
 	<!-- Footer Widget-->
@@ -564,13 +570,13 @@
 					<div class="footer-col col-md-3 col-sm-6">
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer">
-							<h5 class="wgs-title">Get In Touch</h5>
+							<h5 class="wgs-title">Contact Us</h5>
 							<div class="wgs-content">
 								<p><strong>FluidClarity Ltd.</strong><br>
 									1144 West Lake Street, Suite 303 <br>
 									Oak Park, Illinois, USA.</p>
 								<p>
-									<span>Phone</span>: (708) 383 3500</p>
+									<span>Phone</span>: (708) 383-3500</p>
 								<!--	
 								<ul class="social">
 									<li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
