--- a/html-main/index-civil.html
+++ b/html-main/index-civil.html
@@ -82,7 +82,7 @@
 
 						<li><a href="projects.html">Projects</a></li>
 						
-						<li class="dropdown"><a href="about-us.html">About Us <b class="caret"></b></a>
+						<li class="dropdown"><a href="about-us-alter.html">About<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="about-us.html">About Company</a></li>
 								<li><a href="history.html">History</a></li>
