--- a/html-main/clients.html
+++ b/html-main/clients.html
@@ -104,7 +104,7 @@
 				<div class="content row">
 				
 					<div class="imagebg">
-						<img src="image/banner-inside-a.jpg" alt="">
+						<img src="image/water_7.jpg" alt="">
 					</div>
 
 				</div>
