--- a/html-main/index-civil.html
+++ b/html-main/index-civil.html
@@ -104,7 +104,7 @@
 			<div class="carousel-inner">
 				<div class="item active">
 					<!-- Set the first background image using inline CSS below. -->
-					<div class="fill" style="background-image:url('image/slider-lg-civil-a.jpg');">
+					<div class="fill" style="background-image:url('image/water_2.jpg');">
 						<div class="banner-content">
 							<div class="container">
 								<div class="row">
@@ -121,7 +121,7 @@
 				</div>
 				<div class="item">
 					<!-- Set the second background image using inline CSS below. -->
-					<div class="fill" style="background-image:url('image/slider-lg-civil-b.jpg');">
+					<div class="fill" style="background-image:url('image/chicago_3.jpg');">
 						<div class="banner-content">
 							<div class="container">
 								<div class="row">
@@ -165,14 +165,14 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-civil.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-a.jpg" alt="">
+									<img src="image/civil_2_small.jpg" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Civil &amp; Transportation Engineering</h3>
 									<div class="fbox-content">
-										<p> </p>
+										<p>Ipsu dolorsi rogeris apciro fistao abluman feotoria calapata boom bata food sooma </p>
 									</div>
 								</div>
 							</a>
@@ -182,9 +182,9 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-route-topo.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-b.jpg" alt="">
+									<img src="image/topograph_1_small.png" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Route &amp; Topographic Surveying</h3>
@@ -199,9 +199,9 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-drainage.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-c.jpg" alt="">
+									<img src="image/drainage_2_small.jpg" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Drainage Studies</h3>
@@ -216,9 +216,9 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-enviro.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-d.jpg" alt="">
+									<img src="image/environment_1_small.jpg" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Environmental Services</h3>
@@ -233,9 +233,9 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-watershed.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-e.jpg" alt="">
+									<img src="image/watershed_1_small.jpg" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Watershed Planning</h3>
@@ -250,7 +250,7 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 odd">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-permitting.html">
 								<div class="fbox-photo">
 									<img src="image/photo-pt-civil-f.jpg" alt="">
 								</div>
@@ -267,9 +267,9 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 even justify-content-center">
 						<!-- Feature Box -->
 						<div class="feature boxed bg-dark">
-							<a href="projects-alter-.html">
+							<a href="projects-alter-floodplain.html">
 								<div class="fbox-photo">
-									<img src="image/photo-pt-civil-f.jpg" alt="">
+									<img src="image/floodplain_1_small.jpg" alt="">
 								</div>
 								<div class="fbox-over">
 									<h3 class="title">Floodplain Studies</h3>
@@ -336,7 +336,7 @@
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo in their respective.</p>
 					</div>
 					<div class="col-sm-5 col-sm-offset-1">
-						<img src="image/photo-sm-civil-a.jpg" alt="">
+						<img src="image/reeds_1.jpg" alt="">
 					</div>
 				</div>
 				
@@ -345,7 +345,7 @@
 	</div>
 	<!-- End Content -->
 	<!-- CTA-Parallax -->
-	<div class="call-action has-parallax light" style="background-image: url('image/plx-dark-civil.jpg');">
+	<div class="call-action has-parallax light" style="background-image: url('image/water_3.jpg');">
 		<div class="cta-block">
 			<div class="container">
 			
