--- a/html-main/projects-alter-civil.html
+++ b/html-main/projects-alter-civil.html
@@ -103,11 +103,11 @@
 			<div class="container">
 				<div class="content row">
 					
-					<div class="imagebg bgloaded" style="background-image: url(&quot;image/banner-inside-f.jpg&quot;);">
-						<img src="image/banner-inside-f.jpg" alt="">
+					<div class="imagebg bgloaded" style="background-image: url(&quot;image/civil_2_banner.jpg&quot;);">
+						<img src="image/civil_2_banner.jpg" alt="">
 					</div>
 
-				</div>
+				</div
 			</div>
 		</div>
 		<!-- #end Banner/Slider -->
