--- a/html-main/projects-alter-route-topo.html
+++ b/html-main/projects-alter-route-topo.html
@@ -103,8 +103,8 @@
 			<div class="container">
 				<div class="content row">
 					
-					<div class="imagebg bgloaded" style="background-image: url(&quot;image/banner-inside-f.jpg&quot;);">
-						<img src="image/banner-inside-f.jpg" alt="">
+					<div class="imagebg bgloaded" style="background-image: url(&quot;image/topograph_1_banner.png&quot;);">
+						<img src="image/topograph_1_banner.png" alt="">
 					</div>
 
 				</div>
