updated project page template, added new project pages

--- a/html-main/index-civil.html
+++ b/html-main/index-civil.html
@@ -43,7 +43,7 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/fc_text_logo_dark_2.png" srcset="image/logo2x.png 2x">
 					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
@@ -390,91 +390,7 @@
 	<!-- End Section -->
 
 	<!-- Project Section -->
-	<div class="section section-projects recent-project section-pad">
-	    <div class="container">
-	        <div class="content row">
-
-				<h2 class="heading-section center">Ongoing Project</h2>
-	        	<!-- Projects/Feature Row  -->
-				<div class="feature-row feature-project-row mgfix">
-					<div class="owl-carousel loop has-carousel" data-items="4" data-navs="true">
-						<div class="even">
-							<!-- featured box  -->
-							<div class="feature feature-project boxed">
-								<a href="project-single.html">
-									<div class="fbox-photo">
-										<img src="image/work-sm-a.jpg" alt="">
-									</div>
-								</a>
-								<div class="fbox-content">
-									<h3><a href="project-single.html">Altria Warehouse Complex</a></h3>
-								</div>
-							</div>
-							<!-- End -->
-						</div>
-						<div class="odd">
-							<!-- featured box -->
-							<div class="feature feature-project boxed">
-								<a href="project-single.html">
-									<div class="fbox-photo">
-										<img src="image/work-sm-c.jpg" alt="">
-									</div>
-								</a>
-								<div class="fbox-content">
-									<h3><a href="project-single.html">Apollo Hill Project</a></h3>
-								</div>
-							</div>
-							<!-- End -->
-						</div>
-						<div class="even">
-							<!-- featured box -->
-							<div class="feature feature-project boxed">
-								<a href="project-single.html">
-									<div class="fbox-photo">
-										<img src="image/work-sm-b.jpg" alt="">
-									</div>
-								</a>
-								<div class="fbox-content">
-									<h3><a href="project-single.html">Balko Wind Power</a></h3>
-								</div>
-							</div>
-							<!-- End -->
-						</div>
-						<div class="odd">
-							<!-- featured box -->
-							<div class="feature feature-project boxed">
-								<a href="project-single.html">
-									<div class="fbox-photo">
-										<img src="image/work-sm-e.jpg" alt="">
-									</div>
-								</a>
-								<div class="fbox-content">
-									<h3><a href="project-single.html">Rocky Forge Refinary</a></h3>
-								</div>
-							</div>
-							<!-- End -->
-						</div>
-						<div class="odd">
-							<!-- featured box -->
-							<div class="feature feature-project boxed">
-								<a href="project-single.html">
-									<div class="fbox-photo">
-										<img src="image/work-sm-f.jpg" alt="">
-									</div>
-								</a>
-								<div class="fbox-content">
-									<h3><a href="project-single.html">Mingo Village Mining</a></h3>
-								</div>
-							</div>
-							<!-- End -->
-						</div>
-					</div>
-				</div>
-				<!-- Projects/Feature Row  #end -->
-
-	        </div>
-	    </div>
-	</div>
+	
 	<!-- End Section -->
 
 	<!-- Client logo -->
@@ -483,12 +399,12 @@
 			<div class="content row">
 				<h2 class="heading-section center">Associate Member</h2>
 				<div class="owl-carousel loop logo-carousel style-v2">
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo1-w.png"></div>
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo2-w.png"></div>
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo3-w.png"></div>
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo4-w.png"></div>
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo5-w.png"></div>
-					<div class="logo-item"><img alt="" width="190" height="82" src="image/cl-logo6-w.png"></div>
+					<div class="logo-item"><img alt="" width="190" height="82" src="image/SBA_logo.png"></div>
+					<div class="logo-item"><img alt="" width="190" height="82" src="image/ACEC_logo.gif"></div>
+					<div class="logo-item"><img alt="" width="190" height="82" src="image/ASCE_logo.png"></div>
+					<div class="logo-item"><img alt="" width="190" height="82" src="image/SAME_logo.png"></div>
+					<div class="logo-item"><img alt="" width="190" height="82" src="image/IAFSM_logo.jpg"></div>
+					
 				</div>
 
 			</div>
