contact page, about, project pages

--- a/html-main/project-single-FCL-4001.html
+++ b/html-main/project-single-FCL-4001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Projects | FluidClarity </title>
+	<title>Projects | FluidClarity</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="image/favicon.png" type="image/png" sizes="16x16">
@@ -99,7 +99,7 @@
 		</div>
 		<!-- #end Navbar -->
 		<!-- Banner -->
-		<div class="banner banner-static">
+		<!--<div class="banner banner-static">
 			<div class="container">
 				<div class="content row">
 					
@@ -134,8 +134,8 @@
 								<table class="table table-striped bdr-bottom">
 									<tbody>
 										<tr>
-											<td><strong>Finish Date</strong></td>
-											<td>2009</td>
+											<td><strong>Status</strong></td>
+											<td>Completed, 2009</td>
 										</tr>
 										<tr>
 											<td><strong>Clients</strong></td>
