--- a/html-main/contact.html
+++ b/html-main/contact.html
@@ -17,21 +17,20 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Knowledge Centre</a></li>
+							<li><a href="#">Resources</a></li>
 							<li><a href="#">Career</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
 					<div class="top-aside top-right clearfix">
 						<ul class="top-contact clearfix">
 							<li class="t-email t-email1">
 								<em class="fa fa-envelope-o" aria-hidden="true"></em>
-								<span><a href="#">sales@industrial.com</a></span>
+								<span><a href="#">admin@fluidclarity.com</a></span>
 							</li>
 							<li class="t-phone t-phone1">
 								<em class="fa fa-phone" aria-hidden="true"></em>
-								<span>+123-456-789</span>
+								<span>708-383-3500</span>
 							</li>
 						</ul>
 					</div>
