--- a/html-main/project-single-FCL-8003.html
+++ b/html-main/project-single-FCL-8003.html
@@ -125,8 +125,7 @@
 					<div class="row">
 						<div class="col-md-6 col-sm-12 res-m-bttm">
 							<p>  FluidClarity was involved with the technical review and assessment of existing hydrologic and hydraulic models for the watercourses within the North Branch of the Chicago River watershed including using modeling programs approved by FEMA and the Illinois Department of Natural Resources/ Office of Water Resources (IDNR/OWR). FluidClarity compiled information and data from various watershed reports and created a hydraulic model using HEC-GeoRAS for the North Shore Channel, which was then incorporated into the larger model of the North Branch. FluidClarity was a subconsultant to HDR, the prime consultant.</p>
-							<p><</p>
-							<p></p>
+							
 						</div>
 						<div class="col-md-5 col-sm-12 col-md-offset-1">
 							<h3>At a Glance</h3>
@@ -134,8 +133,8 @@
 								<table class="table table-striped bdr-bottom">
 									<tbody>
 										<tr>
-											<td><strong>Finish Date</strong></td>
-											<td>2011</td>
+											<td><strong>Status</strong></td>
+											<td>Completed, 2011</td>
 										</tr>
 										<tr>
 											<td><strong>Clients</strong></td>
