--- a/html-main/projects-alter-route-topo.html
+++ b/html-main/projects-alter-route-topo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Projects | Industrial - Industry and Engineering Services Template</title>
+	<title>Projects | FluidClarity</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="image/favicon.png" type="image/png" sizes="16x16">
@@ -82,15 +82,7 @@
 
 						<li><a href="projects.html">Projects</a></li>
 						
-						<li class="dropdown"><a href="about-us.html">About Us <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="about-us.html">About Company</a></li>
-								<li><a href="history.html">History</a></li>
-								<li><a href="teams.html">Leadership Team</a></li>
-								<li><a href="teams-alt.html">Our People</a></li>
-								<li><a href="responsibility.html">Responsibility</a></li>
-							</ul>
-						</li>
+						<li><a href="about-us-alter.html">About</a>
 						
 					</ul>
 				</nav>    
