--- a/html-main/projects-alter.html
+++ b/html-main/projects-alter.html
@@ -82,15 +82,7 @@
 
 						<li><a href="projects.html">Projects</a></li>
 						
-						<li class="dropdown"><a href="about-us.html">About Us <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="about-us.html">About Company</a></li>
-								<li><a href="history.html">History</a></li>
-								<li><a href="teams.html">Leadership Team</a></li>
-								<li><a href="teams-alt.html">Our People</a></li>
-								<li><a href="responsibility.html">Responsibility</a></li>
-							</ul>
-						</li>
+						<li><a href="about-us-alter.html">About</a>
 						
 					</ul>
 				</nav>    
