--- a/html-main/project-single-FCL-6002.html
+++ b/html-main/project-single-FCL-6002.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -124,7 +124,7 @@
 					<h1>Little Calumet River Detailed Watershed Plan</h1>
 					<div class="row">
 						<div class="col-md-6 col-sm-12 res-m-bttm">
-							<p>The Little Calumet watershed has an area of 213 square miles that includes 45 municipalities.  FluidClarity assisted the MWRDGC in preparing a watershed plan for this highly urbanized watershed.  The scope of work includes data collection and analysis, hydrologic and hydraulic modeling, identification of flooding areas their causes, evaluation of existing flood control facilities, identifying flood control and stormwater management alternatives, program costs and implementation issues.</p>
+							<p>The Little Calumet watershed has an area of 213 square miles that includes 45 municipalities.  FluidClarity assisted the MWRDGC in preparing a watershed plan for this highly urbanized watershed. The scope of work includes data collection and analysis, hydrologic and hydraulic modeling, identification of flooding areas their causes, evaluation of existing flood control facilities, identifying flood control and stormwater management alternatives, program costs and implementation issues.</p>
 							<p>FluidClarity assisted in <b>preparing a detailed watershed plan</b> that prioritizes critical areas in the watershed from the point of view of flood damage mitigation, stormwater management and natural resources preservation. FluidClarity prepared a list of solutions to mitigate the water quality problems, protect natural resources, identify best management practices (BMP), and recommend ways for rehabilitating existing problem areas. An alternative analysis was developed taking into account projects to be built by the Army Corps of Engineers, such as additional levees proposed on the Indiana border, and reservoirs built by the Illinois Department of Natural Resources (IDNR).
 </p>
 							<p>During the second phase of the project, <b>FluidClarity used HEC-GeoRAS combined with unsteady-state hydraulic modeling to develop inundation maps</b> to the standards provided by the Federal Emergency Management Agency (FEMA). The hydrology was modeled in HEC-HMS and calibrated to existing US Geological Survey (USGS) and Metropolitan Water Reclamation District of Greater Chicago (MWRDGC) gages. Unsteady-flow modeling was performed using HEC-RAS and GIS applications were used to prepare the flood maps. Once the maps were complete, several public meetings were held to provide feedback. This included individuals from each of the 45 communities contained within the watershed.
@@ -233,7 +233,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
