--- a/html-main/projects-alter-drainage.html
+++ b/html-main/projects-alter-drainage.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -121,94 +121,20 @@
 					<div class="col-md-4 col-sm-6 col-xs-6 even first">
 						<!-- featured box for project -->
 						<div class="feature feature-project boxed">
-							<a href="project-single.html">
+							<a href="project-single-FCL-4004.html">
 								<div class="fbox-photo">
-									<img src="image/work-sm-a.jpg" alt="">
+									<img src="image/project_generic.jpg" alt="">
 								</div>
 							</a>
 							<div class="fbox-content">
-								<h3><a href="project-single.html">Altria Warehouse Complex</a></h3>
-								<p>Sidid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<h3><a href="project-single-FCL-4004.html">Bull Creek Watershed Flood Insurance Study</a></h3>
+								<p>FluidClarity performed a detailed study to update the existing effective FIS for the 11-square-mile Bull Creek Watershed in Lake County, Illinois.</p>
 							</div>
 						</div>
 						<!-- End Feature box -->
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 odd">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/work-sm-b.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">Balko Wind Power</a></h3>
-								<p>Troid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 even">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/work-sm-c.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">Apollo Hill Project</a></h3>
-								<p>Ridid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 odd first">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/work-sm-d.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">Osage Bio Energy Plants</a></h3>
-								<p>Ridid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
+
 					
-					<div class="col-md-4 col-sm-6 col-xs-6 even">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/work-sm-g.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">First Freedom Center</a></h3>
-								<p>Sidid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 odd">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/work-sm-h.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">Branders Bridge Improvement</a></h3>
-								<p>Troid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
 				</div>
 				<!-- Projects/Feture Row  #end -->
 
@@ -247,7 +173,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
