--- a/html-main/careers.html
+++ b/html-main/careers.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -116,8 +116,8 @@
 					<div class="col-md-6">
 
 						<h1 class="heading-section with-line">Careers</h1>
-						<p>FluidClarity is a dynamic and growing water resources consultancy. Our staff have specific engineering skills and are involved in an direct and hands-on manner with all client projects. We are always searching for qualified candidates in the following areas. If you would like to send us your resume for consideration, please send a cover letter, three references and your resume (PDF format) to: 
-						<span><a href="#">admin@fluidclarity.com</a></span>
+						<p>FluidClarity is a dynamic and growing water resources consultancy. Our staff have specific engineering skills and are involved in an direct and hands-on manner with all client projects. We are always searching for qualified candidates in the following areas. <strong>If you would like to send us your resume for consideration, please send a cover letter, three references and your resume (PDF format) to: 
+						<span><a href="#">admin@fluidclarity.com</a></span></strong>
 					</div> 	
 
 
@@ -188,7 +188,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
