--- a/html-main/project-single-FCL-5012.html
+++ b/html-main/project-single-FCL-5012.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -124,7 +124,7 @@
 					<h1>Fox River Watershed Water Quality Database Development</h1>
 					<div class="row">
 						<div class="col-md-6 col-sm-12 res-m-bttm">
-							<p>FluidClarity assisted with the development of a database that included facilities regulated under the National Pollutant Discharge Elimination System (NPDES) in the Fox River Watershed.  The project was part of an ongoing, multi-year effort sponsored by the FRSG, a non-profit organization devoted to promoting watershed restoration.  FluidClarity compiled water quality data from as many as 120 industrial discharges, including wastewater treatment plans, major industries, and stormwater outfalls.   Facilities were geo-referenced in the database to aid future watershed planning efforts.</p>
+							<p>FluidClarity assisted with the development of a database that included facilities regulated under the National Pollutant Discharge Elimination System (NPDES) in the Fox River Watershed. The project was part of an ongoing, multi-year effort sponsored by the FRSG, a non-profit organization devoted to promoting watershed restoration.  FluidClarity compiled water quality data from as many as 120 industrial discharges, including wastewater treatment plans, major industries, and stormwater outfalls. Facilities were geo-referenced in the database to aid future watershed planning efforts.</p>
 							<p></p>
 							<p></p>
 						</div>
@@ -227,7 +227,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
