--- a/html-main/project-single-FCL-6001.html
+++ b/html-main/project-single-FCL-6001.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -124,7 +124,7 @@
 					<h1>Cal-Sag Channel Detailed Watershed Plan</h1>
 					<div class="row">
 						<div class="col-md-6 col-sm-12 res-m-bttm">
-							<p>The Calumet-Sag (Cal-Sag) Channel watershed is a highly urbanized area of 117 square miles that includes 35 municipalities.  FluidClarity is assisted the MWRDGC in preparing a detailed watershed plan that addressed existing flooding problems and stormwater management in the highly urbanized watershed.  The scope of work included data collection and analysis, assessment of existing flood control facilities and identification of flood control mitigation alternatives, evaluation of ongoing development activities and land-use analysis.</p>
+							<p>The Calumet-Sag (Cal-Sag) Channel watershed is a highly urbanized area of 117 square miles that includes 35 municipalities. FluidClarity assisted the MWRDGC in preparing a detailed watershed plan that addressed existing flooding problems and stormwater management in the highly urbanized watershed. The scope of work included data collection and analysis, assessment of existing flood control facilities and identification of flood control mitigation alternatives, evaluation of ongoing development activities and land-use analysis.</p>
 							<p><b>During Phase 1</b>, a detailed watershed plan was created that prioritized structural and non-structural measures to reduce chronic flooding in the watershed. The watershed plan also listed solutions for mitigating the water quality problems and protecting natural resources; and best management practices (BMPs) for rehabilitating existing flood control facilities.</p>
 							<p><b>During Phase 2</b>, FluidClarity used HEC-GeoRAS combined with unsteady-state hydraulic modeling to develop inundation maps to the standards provided by the Federal Emergency Management Agency (FEMA). The hydrology was modeled in HEC-HMS and calibrated to existing US Geological Survey (USGS) and Metropolitan Water Reclamation District of Greater Chicago (MWRDGC) gages. Unsteady-flow modeling was performed using HEC-RAS and GIS applications were used to prepare the flood maps. Once the maps were complete, several public meetings were held to provide feedback. This included individuals from each of the 35 communities contained within the watershed.
 							</p>
@@ -231,7 +231,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
