--- a/html-main/project-single-FCL-8003.html
+++ b/html-main/project-single-FCL-8003.html
@@ -17,8 +17,8 @@
 				<div class="row">
 					<div class="top-aside top-left">
 						<ul class="top-nav">
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Career</a></li>
+							
+							<li><a href="careers.html">Career</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="./">
-					<img class="logo logo-dark" alt="" src="image/logo.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo-light.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -224,7 +224,7 @@
 							<div class="feature feature-project boxed">
 								<a href="project-single.html">
 									<div class="fbox-photo">
-										<img src="image/work-sm-a.jpg" alt="">
+										<img src="image/project_generic.jpg" alt="">
 									</div>
 								</a>
 								<div class="fbox-content">
@@ -238,7 +238,7 @@
 							<div class="feature feature-project boxed">
 								<a href="project-single.html">
 									<div class="fbox-photo">
-										<img src="image/work-sm-c.jpg" alt="">
+										<img src="image/project_generic.jpg" alt="">
 									</div>
 								</a>
 								<div class="fbox-content">
@@ -252,7 +252,7 @@
 							<div class="feature feature-project boxed">
 								<a href="project-single.html">
 									<div class="fbox-photo">
-										<img src="image/work-sm-b.jpg" alt="">
+										<img src="image/project_generic.jpg" alt="">
 									</div>
 								</a>
 								<div class="fbox-content">
@@ -266,7 +266,7 @@
 							<div class="feature feature-project boxed">
 								<a href="project-single.html">
 									<div class="fbox-photo">
-										<img src="image/work-sm-e.jpg" alt="">
+										<img src="image/project_generic.jpg" alt="">
 									</div>
 								</a>
 								<div class="fbox-content">
@@ -311,7 +311,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo-light.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
 								<p>We are one of the first established oil and gas suppliers and contractors in this industry. Ipsum dolor sit amet sed do eiusmod tempor incidi labore.</p>
 								<p><strong>Areas of Operation:</strong> USA, UK, Kuwit, Japan, South Africa, Australia, Canada, India.</p>
 							</div>
