work on project pages, contact js

--- a/html-main/solutions.html
+++ b/html-main/solutions.html
@@ -104,7 +104,7 @@
 	        	
 	        	<div class="wide-md center">
 	        		<h2 class="heading-section">Our Services</h2>
-					<p>Cepsum dolor sit amet consectetur to adipiscing elit, sed dot eiusmod tempor incididunt labore et dolore magna aliqua. Veniam quis nostrud exercitation ullamco laboris.</p>
+					<p>FluidClarity's goal is to help our clients develop innovative and environmentally sound solutions. Our <strong>technical consulting services</strong> help our clients to articulate and bridge business and community problems, leading to <strong>greater organizational effectiveness</strong> and <strong>improved bottom-line results</strong>.</p>
 	        	</div>
 	        	<!-- Feature Row  -->
 				<div class="feature-row feature-service-row row">
@@ -118,7 +118,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-civil.html">Civil &amp; Transportation Engineering</a></h3>
-								<p>Agricultural engineers may perform tasks such as planning consec adipis elit sed do eiusmod tempor incididut et dolore labore.</p>
+								<p>Projects include roadways, storm and sanitary sewer improvements, flood storage reservoirs, pumping stations, culverts, and single span bridges.</p>
 								<p><a href="projects-alter-civil.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -134,7 +134,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-route-topo.html">Route &amp; Topographic Surveying</a></h3>
-								<p>Areas tackled in the most fundamental parts of medical research consec adipis elit sed do eiusmod tempor incididut labore dolore.</p>
+								<p>We perform route and topographic surveys to support our design and water resources planning services.</p>
 								<p><a href="projects-alter-route-topo.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -150,7 +150,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-drainage.html">Drainage Studies</a></h3>
-								<p>Metal profile sheet systems provide an efficient and reliable consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<p>We analyze drainage problems and solutions to identify appropriate, project-specific drainage systems that do not result in adverse impacts.</p>
 								<p><a href="projects-alter-drainage.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -166,7 +166,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-enviro.html">Environmental Services</a></h3>
-								<p>Engineering is a professional discipline that deals with the consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<p>We apply integrated, context sensitive approaches to environmental modeling and assessment.</p>
 								<p><a href="projects-alter-enviro.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -182,7 +182,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-watershed.html">Watershed Planning</a></h3>
-								<p>Oil and gas exploration is the search by petroleum geologists and adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<p>We work with the coalition of stakeholders, watershed interest groups, and local governments to develop comprehensive watershed plans.</p>
 								<p><a href="projects-alter-watershed.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -198,7 +198,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-permitting.html">Permitting</a></h3>
-								<p>Energy source that is an alternative to fossil dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<p>We assist clients early in the planning process to identify permitting issues and requirements that could impact project development.</p>
 								<p><a href="projects-alter-permitting.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
@@ -214,7 +214,7 @@
 							</a>
 							<div class="fbox-content">
 								<h3><a href="projects-alter-floodplain.html">Floodplain Studies</a></h3>
-								<p>Energy source that is an alternative to fossil dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
+								<p>We perform detailed studies to establish floodplain limits and base flood elevations that can be used in order to support regulatory and floodplain management efforts.</p>
 								<p><a href="projects-alter-floodplain.html" class="btn-link">Learn More</a></p>
 							</div>
 						</div>
