--- a/html-main/projects-alter-civil.html
+++ b/html-main/projects-alter-civil.html
@@ -113,30 +113,12 @@
 
 	        	<div class="wide-md center">
 					<h1>Civil &amp; Transportation Engineering</h1>
-					<p>Typical projects include roadways and associated utilities, storm and sanitary sewer improvements, site plans, flood storage reservoirs, pumping stations, parking lots, culverts and single span bridges. 
-</p>
+					<p>Typical projects include roadways and associated utilities, storm and sanitary sewer improvements, site plans, flood storage reservoirs, pumping stations, parking lots, culverts and single span bridges. </p>
 				</div>
 
 	        	<!-- Projects/Feture Row  -->
 				<div class="feature-row feature-project-row row">
 
-					<div class="col-md-4 col-sm-6 col-xs-6 even first">
-						<!-- featured box for project -->
-						<div class="feature feature-project boxed">
-							<a href="project-single.html">
-								<div class="fbox-photo">
-									<img src="image/project_generic.jpg" alt="">
-								</div>
-							</a>
-							<div class="fbox-content">
-								<h3><a href="project-single.html">Altria Warehouse Complex</a></h3>
-								<p>Sidid ipsum dolor sit amet consec adipis elit sed do eiusmod tempor incididut labore et dolore.</p>
-							</div>
-						</div>
-						<!-- End Feature box -->
-					</div>
-
-					
 				</div>
 				<!-- Projects/Feture Row  #end -->
 
