fixed broken links in footer

--- a/html-main/index-civil.html
+++ b/html-main/index-civil.html
@@ -449,13 +449,13 @@
 							<h5 class="wgs-title">Our Services</h5>
 							<div class="wgs-content">
 								<ul class="menu">
-									<li><a href="#">Civil &amp; Transportation Engineering</a></li>
-									<li><a href="#">Route &amp; Topographic Surveying</a></li>
-									<li><a href="#">Drainage Studies</a></li>
-									<li><a href="#">Environmental Services</a></li>
-									<li><a href="#">Watershed Planning</a></li>
-									<li><a href="#">Permitting</a></li>
-									<li><a href="#">And more</a></li>
+									<li><a href="./projects-alter-civil.html">Civil &amp; Transportation Engineering</a></li>
+									<li><a href="./projects-alter-route-topo.html">Route &amp; Topographic Surveying</a></li>
+									<li><a href="./projects-alter-drainage.html">Drainage Studies</a></li>
+									<li><a href="./projects-alter-enviro.html">Environmental Services</a></li>
+									<li><a href="./projects-alter-watershed.html">Watershed Planning</a></li>
+									<li><a href="./projects-alter-permitting.html">Permitting</a></li>
+									<li><a href="./solutions.html">And more</a></li>
 								</ul>
 							</div>
 						</div>
