--- a/html-main/projects.html
+++ b/html-main/projects.html
@@ -43,8 +43,8 @@
 			<div class="container">
 				<!-- Logo -->
 				<a class="navbar-brand" href="index.html">
-					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo2x.png 2x">
-					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x">
+					<img class="logo logo-dark" alt="" src="image/logo_dark_final.png" srcset="image/logo_dark_final.png 2x">
+					<img class="logo logo-light" alt="" src="image/logo_light_final.png" srcset="image/logo_light_final.png 2x">
 				</a>
 				<!-- #end Logo -->
 				<div class="navbar-header">
@@ -327,7 +327,7 @@
 						<!-- Each Widget -->
 						<div class="wgs wgs-footer wgs-text">
 							<div class="wgs-content">
-								<p><img src="image/logo_light_final.png" srcset="image/logo-light2x.png 2x" alt=""></p>
+								<p><img src="image/logo_light_final.png" srcset="image/logo_light_final.png 2x" alt=""></p>
 								<p>Founded in 2003 on a philosophy emphasizing high quality technical services at reasonable fees, we look at solving water resources problems in a multi-disciplinary way. We believe in being a balanced intermediary between concerned parties to achieve solutions that make a difference.</p>
 								
 							</div>
@@ -340,13 +340,13 @@
 							<h5 class="wgs-title">Our Services</h5>
 							<div class="wgs-content">
 								<ul class="menu">
-									<li><a href="#">Civil &amp; Transportation Engineering</a></li>
-									<li><a href="#">Route &amp; Topographic Surveying</a></li>
-									<li><a href="#">Drainage Studies</a></li>
-									<li><a href="#">Environmental Services</a></li>
-									<li><a href="#">Watershed Planning</a></li>
-									<li><a href="#">Permitting</a></li>
-									<li><a href="#">And more</a></li>
+									<li><a href="./projects-alter-civil.html">Civil &amp; Transportation Engineering</a></li>
+									<li><a href="./projects-alter-route-topo.html">Route &amp; Topographic Surveying</a></li>
+									<li><a href="./projects-alter-drainage.html">Drainage Studies</a></li>
+									<li><a href="./projects-alter-enviro.html">Environmental Services</a></li>
+									<li><a href="./projects-alter-watershed.html">Watershed Planning</a></li>
+									<li><a href="./projects-alter-permitting.html">Permitting</a></li>
+									<li><a href="./solutions.html">And more</a></li>
 								</ul>
 							</div>
 						</div>
