more broken link fixes

--- a/html-main/contact.html
+++ b/html-main/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Contact | Industrial - Industry and Engineering Services Template</title>
+	<title>Contact | FluidClarity - Water Resources Engineering</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="image/favicon.png" type="image/png" sizes="16x16">
