--- a/html-main/solutions.html
+++ b/html-main/solutions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Solutions | Industrial - Industry and Engineering Services Template</title>
+	<title>Services | FluidClarity - Water Resources Engineering</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="image/favicon.png" type="image/png" sizes="16x16">
@@ -111,7 +111,7 @@
 					<div class="col-md-4 col-sm-6 even first">
 						<!-- feature box -->
 						<div class="feature boxed">
-							<a href="solution-single.html">
+							<a href="projects-alter-civil.html">
 								<div class="fbox-photo">
 									<img src="image/civil_2_small_b.jpg" alt="">
 								</div>
@@ -127,7 +127,7 @@
 					<div class="col-md-4 col-sm-6 odd">
 						<!-- feature box -->
 						<div class="feature boxed">
-							<a href="solution-single-alter.html">
+							<a href="projects-alter-route-topo.html">
 								<div class="fbox-photo">
 									<img src="image/topograph_1_small_b.png" alt="">
 								</div>
@@ -143,7 +143,7 @@
 					<div class="col-md-4 col-sm-6 even">
 						<!-- feature box -->
 						<div class="feature boxed">
-							<a href="solution-single.html">
+							<a href="projects-alter-drainage.html">
 								<div class="fbox-photo">
 									<img src="image/drainage_2_small_b.jpg" alt="">
 								</div>
@@ -159,7 +159,7 @@
 					<div class="col-md-4 col-sm-6 odd">
 						<!-- featured box -->
 						<div class="feature boxed">
-							<a href="solution-single-alter.html">
+							<a href="projects-alter-enviro.html">
 								<div class="fbox-photo">
 									<img src="image/environment_1_small_b.jpg" alt="">
 								</div>
@@ -175,7 +175,7 @@
 					<div class="col-md-4 col-sm-6 odd">
 						<!-- featured box -->
 						<div class="feature boxed">
-							<a href="solution-single-alter.html">
+							<a href="projects-alter-watershed.html">
 								<div class="fbox-photo">
 									<img src="image/watershed_1_small_b.jpg" alt="">
 								</div>
@@ -191,7 +191,7 @@
 					<div class="col-md-4 col-sm-6 odd">
 						<!-- featured box -->
 						<div class="feature boxed">
-							<a href="solution-single-extend.html">
+							<a href="projects-alter-permitting.html">
 								<div class="fbox-photo">
 									<img src="image/permitting_1_small_b.jpg" alt="">
 								</div>
@@ -207,7 +207,7 @@
 					<div class="col-md-4 col-sm-6 col-md-offset-4">
 						<!-- featured box -->
 						<div class="feature boxed">
-							<a href="solution-single-extend.html">
+							<a href="projects-alter-floodplain.html">
 								<div class="fbox-photo">
 									<img src="image/floodplain_1_small_b.jpg" alt="">
 								</div>
